[gd_scene load_steps=13 format=3 uid="uid://pk7extbu3xea"]

[ext_resource type="Script" path="res://src/scripts/game-scripts/navigation-menu.gd" id="1_ykvwa"]
[ext_resource type="Texture2D" uid="uid://d1566y1lveil3" path="res://src/ui/elements/Group 173.png" id="2_qyodl"]
[ext_resource type="Texture2D" uid="uid://dx6gagsxuu4uy" path="res://src/ui/buildings/Кланы.png" id="3_102d5"]
[ext_resource type="Texture2D" uid="uid://da06sp2foodbu" path="res://src/ui/backgrounds/Главный_экран_адаптировано_под_размер_.PNG" id="3_j0xlm"]
[ext_resource type="VideoStream" path="res://src/ui/backgrounds/Главный_экран_адаптировано_под_размер_1.ogv" id="3_q2uc8"]
[ext_resource type="Texture2D" uid="uid://10u8v4p7qqrb" path="res://src/ui/characters/character 1.png" id="3_rdbyu"]
[ext_resource type="Texture2D" uid="uid://dv3mstmdt3l0p" path="res://src/ui/characters/c2.png" id="4_s10b8"]
[ext_resource type="Texture2D" uid="uid://doi260lvadhgo" path="res://src/ui/characters/c3.png" id="5_ky8tc"]
[ext_resource type="Texture2D" uid="uid://cyc7b3rsh3qrr" path="res://src/ui/elements/Слой 7.png" id="7_gn6ft"]
[ext_resource type="Texture2D" uid="uid://b1jvu0yh8ojpp" path="res://src/ui/buildings/Биомы.png" id="9_0hf05"]
[ext_resource type="Texture2D" uid="uid://fhk700bxj1gt" path="res://src/ui/buildings/таверна.png" id="9_v4baj"]
[ext_resource type="Texture2D" uid="uid://c7wninjbk56oj" path="res://src/ui/buildings/осады.png" id="12_f3qnn"]

[node name="Navigation-menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ykvwa")

[node name="BackGround-Image" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -117.0
offset_right = 503.0
offset_bottom = 1051.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_j0xlm")
expand_mode = 1

[node name="BackGround-Video" type="VideoStreamPlayer" parent="."]
layout_mode = 1
offset_top = -117.0
offset_right = 503.0
offset_bottom = 1051.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_q2uc8")
autoplay = true
expand = true
loop = true

[node name="PlayerProfileUI" type="CanvasLayer" parent="."]

[node name="PlayerProfileIcon" type="MarginContainer" parent="PlayerProfileUI"]
offset_left = 13.0
offset_top = 27.0
offset_right = 92.0
offset_bottom = 101.0

[node name="ElvesIcon" type="TextureRect" parent="PlayerProfileUI/PlayerProfileIcon"]
visible = false
layout_mode = 2
texture = ExtResource("3_rdbyu")
expand_mode = 1

[node name="HumansIcon" type="TextureRect" parent="PlayerProfileUI/PlayerProfileIcon"]
visible = false
layout_mode = 2
texture = ExtResource("4_s10b8")
expand_mode = 1

[node name="DwarftsIcon" type="TextureRect" parent="PlayerProfileUI/PlayerProfileIcon"]
visible = false
layout_mode = 2
texture = ExtResource("5_ky8tc")
expand_mode = 1

[node name="PlayerProfileUI" type="MarginContainer" parent="PlayerProfileUI"]
offset_right = 504.0
offset_bottom = 109.0
metadata/_edit_use_anchors_ = true

[node name="PlayerProfileUI" type="TextureRect" parent="PlayerProfileUI/PlayerProfileUI"]
layout_mode = 2
texture = ExtResource("2_qyodl")

[node name="PlayerNameContainer" type="MarginContainer" parent="PlayerProfileUI"]
offset_left = 216.0
offset_top = 18.0
offset_right = 367.0
offset_bottom = 47.0

[node name="PlayerName" type="Label" parent="PlayerProfileUI/PlayerNameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "PLAYER NAME"

[node name="ClanBackGround" type="MarginContainer" parent="PlayerProfileUI"]
offset_left = 112.0
offset_top = 70.0
offset_right = 156.0
offset_bottom = 113.0

[node name="ClanBackGroundTexture" type="TextureRect" parent="PlayerProfileUI/ClanBackGround"]
layout_mode = 2
texture = ExtResource("7_gn6ft")
expand_mode = 1

[node name="Buildings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Tavern" type="Control" parent="Buildings"]
layout_mode = 3
anchors_preset = 0
offset_left = -19.0
offset_top = 72.0
offset_right = 161.0
offset_bottom = 290.0

[node name="Tavern" type="MarginContainer" parent="Buildings/Tavern"]
layout_mode = 0
offset_left = 24.0
offset_top = 84.0
offset_right = 215.0
offset_bottom = 264.0

[node name="Tavern" type="TextureButton" parent="Buildings/Tavern/Tavern"]
layout_mode = 2
texture_normal = ExtResource("9_v4baj")
texture_pressed = ExtResource("9_v4baj")
texture_hover = ExtResource("9_v4baj")
texture_focused = ExtResource("9_v4baj")
ignore_texture_size = true
stretch_mode = 0

[node name="TavernLabel" type="MarginContainer" parent="Buildings/Tavern"]
layout_mode = 0
offset_left = 85.0
offset_top = 224.0
offset_right = 196.0
offset_bottom = 270.0

[node name="TavernLabel" type="Label" parent="Buildings/Tavern/TavernLabel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 34
text = "Tavern"

[node name="Biom" type="Control" parent="Buildings"]
layout_mode = 3
anchors_preset = 0
offset_left = -44.0
offset_top = 187.0
offset_right = -4.0
offset_bottom = 227.0

[node name="Biom" type="MarginContainer" parent="Buildings/Biom"]
layout_mode = 0
offset_left = 291.0
offset_top = 104.0
offset_right = 445.0
offset_bottom = 254.0

[node name="Biom" type="TextureButton" parent="Buildings/Biom/Biom"]
layout_mode = 2
texture_normal = ExtResource("9_0hf05")
texture_pressed = ExtResource("9_0hf05")
texture_hover = ExtResource("9_0hf05")
texture_focused = ExtResource("9_0hf05")
ignore_texture_size = true
stretch_mode = 0

[node name="BiomLabel" type="MarginContainer" parent="Buildings/Biom"]
layout_mode = 0
offset_left = 336.0
offset_top = 217.0
offset_right = 447.0
offset_bottom = 263.0

[node name="BiomLabel" type="Label" parent="Buildings/Biom/BiomLabel"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Biom"

[node name="ClansHall" type="Control" parent="Buildings"]
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = 144.0
offset_right = 15.0
offset_bottom = 184.0

[node name="ClansHall" type="MarginContainer" parent="Buildings/ClansHall"]
layout_mode = 0
offset_left = 18.0
offset_top = 438.0
offset_right = 194.0
offset_bottom = 615.0

[node name="ClansHall" type="TextureButton" parent="Buildings/ClansHall/ClansHall"]
layout_mode = 2
texture_normal = ExtResource("3_102d5")
texture_pressed = ExtResource("3_102d5")
texture_hover = ExtResource("3_102d5")
texture_focused = ExtResource("3_102d5")
ignore_texture_size = true
stretch_mode = 0

[node name="ClansHallLabel" type="MarginContainer" parent="Buildings/ClansHall"]
layout_mode = 0
offset_left = 47.0
offset_top = 561.0
offset_right = 199.0
offset_bottom = 607.0

[node name="ClansHallLabel" type="Label" parent="Buildings/ClansHall/ClansHallLabel"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Clans hall"

[node name="League" type="Control" parent="Buildings"]
layout_mode = 3
anchors_preset = 0
offset_left = 77.0
offset_top = 144.0
offset_right = 117.0
offset_bottom = 184.0

[node name="League" type="MarginContainer" parent="Buildings/League"]
layout_mode = 0
offset_left = 267.0
offset_top = 567.0
offset_right = 449.0
offset_bottom = 724.0

[node name="League" type="TextureButton" parent="Buildings/League/League"]
layout_mode = 2
texture_normal = ExtResource("12_f3qnn")
texture_pressed = ExtResource("12_f3qnn")
texture_hover = ExtResource("12_f3qnn")
texture_focused = ExtResource("12_f3qnn")
ignore_texture_size = true
stretch_mode = 0

[node name="LeagueLabel" type="MarginContainer" parent="Buildings/League"]
layout_mode = 0
offset_left = 290.0
offset_top = 690.0
offset_right = 442.0
offset_bottom = 736.0

[node name="LeagueLabel" type="Label" parent="Buildings/League/LeagueLabel"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "League"

[connection signal="pressed" from="Buildings/Tavern/Tavern/Tavern" to="." method="_on_tavern_pressed"]
[connection signal="pressed" from="Buildings/Biom/Biom/Biom" to="." method="_on_biom_pressed"]
[connection signal="pressed" from="Buildings/ClansHall/ClansHall/ClansHall" to="." method="_on_clans_hall_pressed"]
[connection signal="pressed" from="Buildings/League/League/League" to="." method="_on_league_pressed"]
